[metadata]
name = chisel4ml
description = A chisel based hardware generation library for highly quantized neural networks.
author = Jure Vreca
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

description-file =
    README.md

[options]
packages = find:

[options.extras_require]
testing =
    flake8>=3.9.2
    tox>=3.24.3
    tox-run-before>=0.1
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910
    mypy-protobuf>=3.2.0
    sphinx>=4.5.0
    pbr>=5.8.1
    grpcio-tools>=1.46.0

[options.package_data]
chisel4ml = py.typed

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude=
    lbir_pb2.py
    lbir_pb2.pyi
    lbir_pb2_grpc.py
    services_pb2.py
    services_pb2.pyi
    services_pb2_grpc.py
    server_manager.py

[files]
packages =
    chisel4ml
