[metadata]
name = chisel4ml
description = A chisel based hardware generation library for highly quantized neural networks.
author = Jure Vreca
license = Apache-2
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

description_file =
    README.md

[options]
packages =
    chisel4ml
include_package_data = True

[options.exclude_package_data]
chisel4ml =
    *.scala
    *tests*

[options.package_data]
chisel4ml = py.typed


[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude=
    lbir_pb2.py
    lbir_pb2.pyi
    lbir_pb2_grpc.py
    services_pb2.py
    services_pb2.pyi
    services_pb2_grpc.py
    server_manager.py
